--- a/ICT303-Assignment-2.ipynb
+++ b/ICT303-Assignment-2.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu129\n",
+    "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126\n",
     "%pip install matplotlib\n",
     "%pip install numpy\n",
     "%pip install tensorboard\n",
@@ -19,8 +19,43 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "from torchvision import transforms",
-   "id": "86b21a5e4b47a6fe"
+   "source": [
+    "# Set Up\n",
+    "import os\n",
+    "import torch\n",
+    "\n",
+    "from torchvision import transforms\n",
+    "import torchvision\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from DataLoader import DataLoader\n",
+    "from CNN import CNN\n",
+    "from Trainer import Trainer\n",
+    "\n",
+    "def img_show(img):\n",
+    "    img = img / 2 + 0.5 # unnormalize\n",
+    "    np_img = img.cpu().numpy()\n",
+    "    plt.imshow(np.transpose(np_img, (1, 2, 0)))\n",
+    "    plt.show()\n",
+    "\n",
+    "train_transform = transforms.Compose([transforms.Resize((224, 224)),\n",
+    "                                      transforms.RandomHorizontalFlip(),\n",
+    "                                      transforms.RandomVerticalFlip(),\n",
+    "                                      transforms.RandomRotation(180),\n",
+    "                                      transforms.RandomAdjustSharpness(0), # Randomly Blur Image\n",
+    "                                      transforms.ToTensor(),\n",
+    "                                      transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+    "\n",
+    "test_transform = transforms.Compose([transforms.Resize((224, 224)),\n",
+    "                                     transforms.ToTensor(),\n",
+    "                                     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)"
+   ],
+   "id": "ca81adf861eac5b7"
   },
   {
    "metadata": {},
@@ -28,15 +63,90 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "train_transform = transforms.Compose([transforms.Resize((224, 224)),\n",
-    "                                      transforms.RandomHorizontalFlip(),\n",
-    "                                      transforms.RandomVerticalFlip(),\n",
-    "                                      transforms.RandomRotation(180),\n",
-    "                                      transforms.RandomAdjustSharpness(0), # Randomly Blur Image\n",
-    "                                      transforms.ToTensor(),\n",
-    "                                      transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])"
+    "train_set, valid_set, test_set, = DataLoader(data_dir=os.getcwd() + \"/fire_dataset\", trans_width=224, trans_height=224).load(transform=train_transform, batch_size=32, shuffle=True, workers=2)\n",
+    "model = CNN(log_dir=os.getcwd()+\"/CNN\", lr=1e-4).to(device)\n",
+    "trainer = Trainer(log_dir=os.getcwd()+\"/CNN\", n_epochs=30, device=device)"
    ],
-   "id": "be73c1dc9ffc710a"
+   "id": "a5a655cad7821e19"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%load_ext tensorboard\n",
+    "trainer.fit(model=model, data=train_set, valid=valid_set, use_lr_scheduler=True)"
+   ],
+   "id": "b36a6467fb7ddf76"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "plt.clf()\n",
+    "plt.plot(getattr(trainer, \"avg_train_loss\"), label=\"Avg. Training Loss\")\n",
+    "plt.plot(getattr(trainer, \"avg_valid_loss\"), label=\"Avg. Validation Loss\")\n",
+    "plt.plot(getattr(trainer, \"training_accuracy\"), label=\"Training Accuracy (x100)%\")\n",
+    "plt.plot(getattr(trainer, \"validation_accuracy\"), label=\"Validation Accuracy (x100)%\")\n",
+    "plt.legend()\n",
+    "plt.savefig(os.getcwd() + \"/CNN/CNN_Loss_Plot.jpg\")"
+   ],
+   "id": "f9b948175372690a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%load_ext tensorboard\n",
+    "for epoch in range(len(trainer.avg_train_loss)):\n",
+    "    model.writer.add_scalars('CNN', {'Avg_Training_Loss': trainer.avg_train_loss[epoch],\n",
+    "                                     'Avg_Validation_Loss': trainer.avg_valid_loss[epoch],\n",
+    "                                     'Training_Accuracy(x100)%': trainer.training_accuracy[epoch],\n",
+    "                                     'Validation_Accuracy(x100)%': trainer.validation_accuracy[epoch]}, epoch)"
+   ],
+   "id": "cd040fd377b3504f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "model.writer.close()",
+   "id": "a08a58b27f33966b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "%tensorboard --logdir=./CNN",
+   "id": "2ace5aa7227e2f1f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "classes = train_set.dataset.classes\n",
+    "dataiter = iter(test_set)\n",
+    "images, labels = next(dataiter)\n",
+    "\n",
+    "images = images.to(device)\n",
+    "\n",
+    "img_show(torchvision.utils.make_grid(images))\n",
+    "model.eval()\n",
+    "output = model(images).to(device)\n",
+    "estimatedLabels = torch.max(output, 1).indices\n",
+    "\n",
+    "print('Estimated Labels: ', ' '.join(f'{classes[estimatedLabels[j]]:5s}' for j in range(images.shape[0])))"
+   ],
+   "id": "ce6d9d6f12f10ddb"
   },
   {
    "metadata": {},
@@ -61,6 +171,12 @@
    "cell_type": "markdown",
    "source": "Originally I was planning to try to implement a DenseNet architecture to address potential issues with exploding or tarnishing gradients, however with the size of the dataset I have chosen, I think it may make the model too complex for the amount of data. So for the size of the dataset, it should require a smaller model. For this reason, I have decided to experiment around with some custom CNN architectures.",
    "id": "8cad4bb87b707a3f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "For my initial architecture, I have decided to use 3 blocks that consist of a convolutional layer, a ReLU activation and a max pool.",
+   "id": "67123791d96b20bd"
   }
  ],
  "metadata": {
